--- a/projects/components/_styles/components/Button.styl
+++ b/projects/components/_styles/components/Button.styl
@@ -19,7 +19,7 @@
   }
 
   // 形状
-  border-radius: 5px;
+  border-radius: $radius-md;
   &.square {
     border-radius: 0;
   }
@@ -30,7 +30,7 @@
     display: inline-flex;
     padding: 0;
     width: $button-height;
-    border-radius: $button-height;
+    border-radius: $radius-circle;
     &.mini {
       width: $button-height--mini;
       border-radius: $button-height--mini;
