--- a/projects/components/_styles/components/Input.styl
+++ b/projects/components/_styles/components/Input.styl
@@ -20,7 +20,7 @@ $clearer-size = 17px;
   margin: 0 $h-spacing-sm;
   size: $clearer-size;
   background: $color-text-placeholder;
-  border-radius: $clearer-size;
+  border-radius: $radius-circle;
   &:before, &:after {
     content: '';
     position: absolute;
