--- a/projects/components/_styles/mixins.styl
+++ b/projects/components/_styles/mixins.styl
@@ -30,7 +30,7 @@ reset($type) {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-weight: 400;
-    color: $color-text-paragraph;
+    color: $color-text-base;
   } else if $type == box-model {
     box-sizing: border-box;
     background-clip: padding-box;
