--- a/projects/components/_styles/variables.styl
+++ b/projects/components/_styles/variables.styl
@@ -40,6 +40,7 @@ $radius-lg = 7px;
 $radius-circle = 50%;
 
 // 水平间距
+$h-spacing-xs = 2px;
 $h-spacing-sm = 5px;
 $h-spacing-md = 8px;
 $h-spacing-lg = 15px;
