--- a/projects/components/_styles/components/ListItem.styl
+++ b/projects/components/_styles/components/ListItem.styl
@@ -1,58 +1,90 @@
 @require '../settings';
 
 .item {
-  reset: base;
-  display: flex;
-  align-items: center;
-}
-
-.left {
-  display: flex;
-  align-items: center;
-  .icon {
-    display: flex;
-    align-items: center;
-    margin-left: $h-spacing-md;
-    font-size: $font-size-caption;
-  }
-}
-
-.body {
-  flex: 1;
+  reset: font;
   display: flex;
   align-items: center;
   margin-left: $h-spacing-md;
 
-  .item:not(:last-child) & {
-    border-bottom: 1PX solid $color-line-light;
+  // 点击反馈
+  &.tappable {
+    &:active {
+      background-color: $fill-tap;
+    }
   }
+}
 
+// 左部内容
+.left {
+  display: flex;
+  align-items: center;
+  padding: $h-spacing-md 0;
+
+  // 图标
+  .icon {
+    display: flex;
+    align-items: center;
+    font-size: $font-size-caption;
+  }
+}
+
+// 主内容
+.body {
+  reset: box-model;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  min-height: 44px;
+  padding: $h-spacing-md $h-spacing-md $h-spacing-md 0;
+
+  // 中部内容
   .center {
     display: flex;
+    align-items: center;
     flex-grow: 1;
-    flex-direction: column;
-    justify-content: center;
-    min-height: 44px;
-    .title {
-      flex-basis: 100%;
-      font-size: $font-size-heading;
+    flex-shrink: 0;
+
+    // 标题区
+    .caption {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      // 标题
+      .title {
+        flex-basis: 100%;
+        font-size: $font-size-heading;
+      }
+
+      // 简介
+      .desc {
+        font-size: $font-size-base;
+        flex-basis: 100%;
+        color: $color-text-caption;
+      }
     }
-    .desc {
-      font-size: $font-size-base;
-      flex-basis: 100%;
-      color: $color-text-caption;
+
+    // 内容区
+    .value {
+      flex: 1;
+      font-size: $font-size-heading;
     }
   }
 
+  // 右部内容
   .right {
     display: flex;
     align-items: center;
+
+    // 其他信息
     .extra {
       flex: 1;
-      font-size: $font-size-caption;
+      font-size: $font-size-base;
       color: $color-text-caption;
       text-wrap: true;
     }
+
+    // 链接箭头
     .chevron {
       display: inline-block;
       height: 6px;
@@ -62,7 +94,23 @@
       border-style: solid;
       transform: matrix(0.71, 0.71, -0.71, 0.71, 0, 0);
       margin-left: $h-spacing-xs;
-      margin-right: $h-spacing-md;
     }
   }
+}
+
+// 分隔线
+.item.long-divider {
+  margin-left: 0;
+  padding-left: $h-spacing-md;
+  &:not(:last-child) {
+    border-bottom: 1PX solid $color-line-light;
+  }
+}
+.item:not(.long-divider):not(.no-divider):not(:last-child) .body {
+  border-bottom: 1PX solid $color-line-light;
+}
+
+// 间隔
+.left + .body, .center + .right, .caption + .value {
+  margin-left: $h-spacing-md;
 }
