--- a/projects/components/_styles/components/Input.styl
+++ b/projects/components/_styles/components/Input.styl
@@ -18,7 +18,7 @@ $clearer-size = 17px;
 .clearer {
   reset: box-model;
   position: relative;
-  margin: 0 $h-spacing-sm;
+  margin-left: $h-spacing-sm;
   size: $clearer-size;
   background: $color-text-placeholder;
   border-radius: $radius-circle;
