--- a/src/components/_styles/variables.styl
+++ b/src/components/_styles/variables.styl
@@ -66,3 +66,8 @@ $choose-size = 22px;
 
 // 操作栏
 $action-bar-height = 50px;
+
+// 打分
+$rate-font-size = 21px;
+$rate-star-color = #E8E8E8;
+$rate-star-selected-color = #FADB14;
