--- a/src/components/_styles/variables.styl
+++ b/src/components/_styles/variables.styl
@@ -71,3 +71,7 @@ $action-bar-height = 50px;
 $rate-font-size = 21px;
 $rate-star-color = #E8E8E8;
 $rate-star-selected-color = #FADB14;
+
+// 开关
+$switch-width = 51px;
+$switch-height = 31px;
