--- a/src/components/_styles/components/Switch.styl
+++ b/src/components/_styles/components/Switch.styl
@@ -7,6 +7,10 @@
   vertical-align: middle;
   box-sizing: border-box;
   color: $color-primary;
+  &.disabled {
+    opacity: 0.5;
+    pointer-events: none;
+  }
 }
 
 .input {
