use hairline mixin instead of border

--- a/src/components/_styles/components/ActionBar.styl
+++ b/src/components/_styles/components/ActionBar.styl
@@ -16,8 +16,8 @@
   background: white;
   z-index: 1;
   font-size: $font-size-caption;
-  border-top: 1PX solid $color-line-light;
+  hairline(top);
   &.borderless {
-    border-top: none;
+    hairline-remove(top);
   }
 }
