--- a/src/components/_styles/components/ListItem.styl
+++ b/src/components/_styles/components/ListItem.styl
@@ -103,11 +103,11 @@
   margin-left: 0;
   padding-left: $h-spacing-md;
   &:not(:last-child) {
-    border-bottom: 1PX solid $color-line-light;
+    hairline(bottom);
   }
 }
 .item:not(.long-divider):not(.no-divider):not(:last-child) .body {
-  border-bottom: 1PX solid $color-line-light;
+  hairline(bottom);
 }
 
 // 间隔
