--- a/src/components/_styles/mixins.styl
+++ b/src/components/_styles/mixins.styl
@@ -144,7 +144,7 @@ v-hairline-base() {
   }
 }
 
-hairline($directions = all, $color = $color-line-dark, $radius = 0, $type = solid) {
+hairline($directions = all, $color = $color-line-light, $radius = 0, $type = solid) {
   if $directions == all {
     // all
     border: 1PX $type $color;
@@ -215,6 +215,28 @@ hairline($directions = all, $color = $color-line-dark, $radius = 0, $type = soli
             transform-origin: 100% 50%;
           }
         }
+      }
+    }
+  }
+}
+
+hairline-color($color) {
+  border-color: $color;
+  :global(html:not([data-scale])) & {
+    @media (min-resolution: 2dppx) {
+      &::before, &::after {
+        border-color: $color;
+      }
+    }
+  }
+}
+
+hairline-radius($radius) {
+  border-radius: $radius;
+  :global(html:not([data-scale])) & {
+    @media (min-resolution: 2dppx) {
+      &::before, &::after {
+        border-radius: $radius * 2;
       }
     }
   }
