add services: picker, datePicker

--- a/src/components/_styles/components/ImagePicker.styl
+++ b/src/components/_styles/components/ImagePicker.styl
@@ -55,7 +55,8 @@
 .select {
   box-sizing: border-box;
   background-color: $fill-base;
-  hairline(all, $color-line-light, $radius-sm);
+  border: 1PX solid $color-line-light;
+  border-radius: $radius-sm;
 
   &:active {
     background-color: $fill-tap;
