--- a/src/components/_styles/mixins.styl
+++ b/src/components/_styles/mixins.styl
@@ -48,7 +48,7 @@ reset($type) {
     box-shadow: none;
     color: inherit;
     font: inherit;
-    line-height: normal;
+    line-height: 1;
     vertical-align: middle;
     background-color: transparent;
     -webkit-user-select: none;
