--- a/src/components/_styles/variables.styl
+++ b/src/components/_styles/variables.styl
@@ -77,4 +77,6 @@ $switch-width = 51px;
 $switch-height = 31px;
 
 // 徽标
-$badge-height = 20px;
+$badge-font-size = 12px;
+$badge-h-padding = 4px;
+$badge-height = $badge-font-size + ($badge-h-padding * 2);
