--- a/src/components/_styles/mixins.styl
+++ b/src/components/_styles/mixins.styl
@@ -112,148 +112,83 @@ size($size) {
 }
 
 // 边线
-scale-hairline-common($color, $top, $right, $bottom, $left) {
-  content: '';
-  position: absolute;
-  background-color: $color;
-  display: block;
-  z-index: 1;
-  top: $top;
-  right: $right;
-  bottom: $bottom;
-  left: $left;
-}
-
-h-hairline-base() {
-  width: 100%;
-  height: 1PX;
-  transform: scaleY(0.5);
-
-  @media (min-resolution: 3dppx) {
-    transform: scaleY(0.33);
-  }
-}
-
-v-hairline-base() {
-  width: 1PX;
-  height: 100%;
-  transform: scaleX(0.5);
-
-  @media (min-resolution: 3dppx) {
-    transform: scaleX(0.33);
-  }
-}
-
 hairline($directions = all, $color = $color-line-light, $radius = 0, $type = solid) {
-  if $directions == all {
-    // all
-    border: 1PX $type $color;
+  $directions = $directions == all ? (top right bottom left) : $directions;
+
+  position: relative;
+  border: none;
+  border-radius: $radius;
+
+  &::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border: 0 $type $color;
     border-radius: $radius;
-
-    :global(html:not([data-scale])) & {
-      @media (min-resolution: 2dppx) {
-        position: relative unless @position;
-        border: none;
-
-        &::before {
-          content: '';
-          position: absolute;
-          left: 0;
-          top: 0;
-          width: 200%;
-          height: 200%;
-          border: 1PX $type $color;
-          border-radius: $radius * 2;
-          transform-origin: 0 0;
-          transform: scale(0.5);
-          box-sizing: border-box;
-          pointer-events: none;
-        }
-      }
-    }
-  } else {
-    // a list: (top? right? bottom? left?)
+    box-sizing: border-box;
+    pointer-events: none;
+    transform-origin: 0 0;
+    z-index: 1;
     for $direction in $directions {
-      border-{$direction}: 1PX $type $color;
+      border-{$direction}-width: 1PX;
     }
-
-    :global(html:not([data-scale])) & {
-      @media (min-resolution: 2dppx) {
-        position: relative unless @position;
-        for $direction in $directions {
-          border-{$direction}: none;
-        }
-
-        if top in ($directions) {
-          &::before {
-            scale-hairline-common: $color 0 auto auto 0;
-            h-hairline-base: true;
-            transform-origin: 50% 50%;
-          }
-        }
-
-        if bottom in ($directions) {
-          &::after {
-            scale-hairline-common: $color auto auto 0 0;
-            h-hairline-base: true;
-            transform-origin: 50% 100%;
-          }
-        }
-
-        if right in ($directions) {
-          &::after {
-            scale-hairline-common: $color 0 0 auto auto;
-            v-hairline-base: true;
-            transform-origin: 100% 50%;
-          }
-        }
-
-        if left in ($directions) {
-          &::after {
-            scale-hairline-common: $color auto auto 0 0;
-            v-hairline-base: true;
-            transform-origin: 100% 50%;
-          }
-        }
-      }
+  }
+  @media (min-resolution: 2dppx) {
+    &::before {
+      width: 200%;
+      height: 200%;
+      border-radius: $radius * 2;
+      transform: scale(0.5) translateZ(0px);
+    }
+  }
+  @media (min-resolution: 3dppx) {
+    &::before {
+      width: 300%;
+      height: 300%;
+      border-radius: $radius * 3;
+      transform: scale(0.3333) translateZ(0px);
     }
   }
 }
 
 hairline-color($color) {
-  border-color: $color;
-  :global(html:not([data-scale])) & {
-    @media (min-resolution: 2dppx) {
-      &::before, &::after {
-        border-color: $color;
-      }
-    }
+  &::before {
+    border-color: $color;
   }
 }
 
 hairline-radius($radius) {
   border-radius: $radius;
-  :global(html:not([data-scale])) & {
-    @media (min-resolution: 2dppx) {
-      &::before, &::after {
-        border-radius: $radius * 2;
-      }
+  &::before {
+    border-radius: $radius;
+  }
+  @media (min-resolution: 2dppx) {
+    &::before {
+      border-radius: $radius * 2;
+    }
+  }
+  @media (min-resolution: 3dppx) {
+    &::before {
+      border-radius: $radius * 3;
     }
   }
 }
 
-hairline-remove($directions = (top right bottom left)) {
-  for $direction in $directions {
-    border-{$direction}: 0;
+hairline-style($style) {
+  &::before {
+    border-style: $style;
   }
+}
 
-  if top in $directions or left in $directions {
-    &::before {
-      display: none !important;
-    }
-  } else {
-    &::after {
-      display: none !important;
+hairline-remove($directions = all) {
+  $directions = $directions == all ? (top right bottom left) : $directions;
+
+  &::before {
+    for $direction in $directions {
+      border-{$direction}: none;
     }
   }
 }
