--- a/src/components/_styles/components/ListItem.styl
+++ b/src/components/_styles/components/ListItem.styl
@@ -8,7 +8,7 @@
 
   // 点击反馈
   &.tappable {
-    &:active {
+    &.active {
       background-color: $fill-tap;
     }
   }
@@ -61,6 +61,7 @@
         font-size: $font-size-base;
         flex-basis: 100%;
         color: $color-text-caption;
+        margin-top: $v-spacing-xs;
       }
     }
 
