--- a/src/components/_styles/components/Badge.styl
+++ b/src/components/_styles/components/Badge.styl
@@ -28,7 +28,7 @@
     border-radius: 0;
   }
   .dot & {
-    size: ($badge-height / 2.5);
+    size: $badge-dot-size;
     min-width: auto;
     border-radius: 100%;
     padding: 0;
