--- a/src/components/_styles/variables.styl
+++ b/src/components/_styles/variables.styl
@@ -78,5 +78,11 @@ $switch-height = 31px;
 
 // 徽标
 $badge-font-size = 12px;
-$badge-h-padding = 4px;
+$badge-h-padding = 3px;
 $badge-height = $badge-font-size + ($badge-h-padding * 2);
+$badge-dot-size = 8px;
+
+// 标签栏
+$tab-bar-font-size = 10px;
+$tab-bar-icon-size = 22px;
+$tab-bar-height = 50px;
