--- a/src/components/_styles/components/TabBar.styl
+++ b/src/components/_styles/components/TabBar.styl
@@ -1,5 +1,20 @@
 @require '../settings';
 
-.bar {
+.tab-bar {
+  reset: base;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: $tab-bar-height;
+  background: white;
+  hairline(top);
+  position: fixed;
+  z-index: 1;
+}
 
+.holder {
+  height: $tab-bar-height;
 }
