--- a/src/components/_styles/components/ImagePicker.styl
+++ b/src/components/_styles/components/ImagePicker.styl
@@ -1,6 +1,6 @@
 @require '../settings';
 
-.picker {
+.image-picker {
   padding: $v-spacing-md $h-spacing-md 0;
   margin-bottom: $h-spacing-lg;
 }
