--- a/src/components/_styles/components/ListItem.styl
+++ b/src/components/_styles/components/ListItem.styl
@@ -55,7 +55,7 @@
     .title {
       flex-basis: 100%;
       overflow: hidden;
-      font-size: $font-size-heading;
+      font-size: $font-size-caption;
     }
 
     // 简介
@@ -72,7 +72,7 @@
   .value {
     flex-grow: 1;
     overflow: hidden;
-    font-size: $font-size-heading;
+    font-size: $font-size-caption;
   }
 
   // 其他信息
