--- a/src/components/_styles/variables.styl
+++ b/src/components/_styles/variables.styl
@@ -86,3 +86,8 @@ $badge-dot-size = 8px;
 $tab-bar-font-size = 10px;
 $tab-bar-icon-size = 22px;
 $tab-bar-height = 50px;
+
+// 通告栏
+$notice-bar-font-size = 14px;
+$notice-bar-height = 36px;
+$notice-bar-font-color = $color-warning;
