--- a/src/components/_styles/components/ListItem.styl
+++ b/src/components/_styles/components/ListItem.styl
@@ -47,6 +47,7 @@
   // 左部内容
   .left {
     flex-shrink: 0;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     overflow: hidden;
@@ -70,7 +71,9 @@
 
   // 内容区
   .value {
-    flex-grow: 1;
+    // 以极大的 grow 和 shrink 值令其自适应
+    flex-grow: 2000;
+    flex-shrink: 2000;
     overflow: hidden;
     font-size: $font-size-caption;
   }
