--- a/src/components/_styles/components/NoticeBar.styl
+++ b/src/components/_styles/components/NoticeBar.styl
@@ -11,17 +11,20 @@
   padding: 0 $v-spacing-sm;
 }
 
-.icon, .action {
+.left, .action {
   flex-shrink: 0;
-  font-size: ($notice-bar-font-size + 0);
 }
 
-.icon {
+.left {
   padding-right: $v-spacing-sm;
 }
 
 .action {
   padding-left: $v-spacing-sm;
+}
+
+.icon {
+  font-size: ($notice-bar-font-size + 1);
 }
 
 .content {
