--- a/src/components/_styles/mixins.styl
+++ b/src/components/_styles/mixins.styl
@@ -61,6 +61,11 @@ reset($type) {
     &::placeholder {
       color: $color-text-placeholder;
     }
+    -moz-appearance: textfield;
+    &::-webkit-outer-spin-button, &::-webkit-inner-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
   }
 }
 
