--- a/src/components/_styles/variables.styl
+++ b/src/components/_styles/variables.styl
@@ -91,3 +91,6 @@ $tab-bar-height = 50px;
 $notice-bar-font-size = 14px;
 $notice-bar-height = 36px;
 $notice-bar-font-color = $color-warning;
+
+// 计数器
+$counter-height = 30px;
