--- a/src/components/_styles/variables.styl
+++ b/src/components/_styles/variables.styl
@@ -94,3 +94,7 @@ $notice-bar-font-color = $color-warning;
 
 // 计数器
 $counter-height = 30px;
+
+// 标签栏
+$tabs-font-size = $font-size-subhead;
+$tabs-height = 43px;
