--- a/src/components/_styles/components/Card.styl
+++ b/src/components/_styles/components/Card.styl
@@ -2,7 +2,7 @@
 
 .card {
   reset: base;
-  box-shadow: 0 1px 2px rgba(black, .12);
+  box-shadow: 0 1px 1px 1px rgba(black, .12);
   border-radius: $radius-lg;
   background-color: white;
   margin: $h-spacing-md;
