--- a/src/components/_styles/components/Tabs.styl
+++ b/src/components/_styles/components/Tabs.styl
@@ -3,9 +3,8 @@
 .tabs {
   reset: base;
   display: flex;
-  align-items: stretch;
-  justify-content: space-around;
-  height: $tabs-height;
   background: white;
-  hairline(bottom);
+  white-space: nowrap;
+  height: $tabs-height;
+  overflow: hidden;
 }
