--- a/src/components/_styles/components/Tab.styl
+++ b/src/components/_styles/components/Tab.styl
@@ -1,19 +1,20 @@
 @require '../settings';
 
 .tab {
-  flex-shrink: 0;
   reset: box-model;
+  flex: 1;
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  height: 100%;
   padding: 0 $h-spacing-lg;
-  border-bottom: 2px solid transparent;
-  width: auto;
   color: $color-text-caption;
   font-size: $tabs-font-size;
+  hairline(bottom);
 }
 
 .active {
   color: $color-primary;
-  border-bottom-color: $color-primary;
+  hairline-color($color-primary);
+  hairline-width(2px, bottom);
 }
