--- a/src/components/_styles/components/PreviewItem.module.styl
+++ b/src/components/_styles/components/PreviewItem.module.styl
@@ -1,5 +1,39 @@
 @require '../settings';
 
 .preview-item {
+  reset: box-model;
+  min-height: 28px;
+  display: flex;
+  justify-content: space-between;
+  line-height: 1.5;
+  padding: $v-spacing-xs $h-spacing-md $v-spacing-xs 0;
+  font-size: $font-size-subhead;
+  color: $color-text-caption;
+  &:not(.plain):first-child {
+    padding-bottom: $v-spacing-md + $v-spacing-xs;
+    hairline(bottom);
+    .value {
+      font-size: $font-size-caption;
+      color: $color-text-base;
+    }
+    + .preview-item {
+      padding-top: $v-spacing-md + $v-spacing-xs;
+    }
+  }
+}
 
+.title {
+  flex-shrink: 0;
+  ellipsis: 1;
+  width: 4em;
+  text-align: justify;
+  text-align-last: justify;
+}
+
+.value {
+  text-align: right;
+  text-wrap: true;
+  .title + & {
+    margin-left: $h-spacing-lg;
+  }
 }
