--- a/src/components/_styles/variables.styl
+++ b/src/components/_styles/variables.styl
@@ -44,6 +44,7 @@ $h-spacing-xs = 2px;
 $h-spacing-sm = 5px;
 $h-spacing-md = 8px;
 $h-spacing-lg = 15px;
+$h-spacing-xl = 21px;
 
 // 垂直间距
 $v-spacing-xs = 3px;
