--- a/src/components/_styles/components/Button.module.styl
+++ b/src/components/_styles/components/Button.module.styl
@@ -1,5 +1,12 @@
 @require '../settings';
 
+.wrapper {
+  display: block;
+  &.mini {
+    display: inline-block;
+  }
+}
+
 .button {
   reset: input;
   flex-center: true;
@@ -103,7 +110,7 @@
   }
 
   // 无边框
-  &.borderless {
+  &.no-border {
     hairline-remove(all);
   }
 
