--- a/src/components/_styles/components/Input.module.styl
+++ b/src/components/_styles/components/Input.module.styl
@@ -10,8 +10,15 @@ $clearer-size = 17px;
 .input {
   reset: input;
   text-align: inherit;
+  min-height: 1.5em;
+  line-height: 1.5;
   flex: 1;
   width: 100%;
+  &:disabled {
+    opacity: 1;
+    -webkit-text-fill-color: inherit;
+    color: inherit;
+  }
 }
 
 // 清空图标
