--- a/src/components/_styles/components/PreviewItem.module.styl
+++ b/src/components/_styles/components/PreviewItem.module.styl
@@ -24,10 +24,18 @@
 
 .title {
   flex-shrink: 0;
-  ellipsis: 1;
   width: 4em;
   text-align: justify;
   text-align-last: justify;
+  height: 1.5em;
+  overflow: hidden;
+  &:after{
+    content: '';
+    display: inline-block;
+    overflow: hidden;
+    width: 100%;
+    height: 0;
+  }
 }
 
 .value {
