--- a/src/components/_styles/mixins.styl
+++ b/src/components/_styles/mixins.styl
@@ -51,15 +51,18 @@ reset($type) {
     line-height: 1;
     vertical-align: middle;
     background-color: transparent;
-    -webkit-user-select: none;
-    user-select: none;
     touch-action: manipulation;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-user-select: none;
+    user-select: none;
   } else if $type == input {
     reset(base);
-    line-height: inherit;
+    -webkit-user-select: auto;
+    user-select: auto;
+    line-height: normal;
     &::placeholder {
       color: $color-text-placeholder;
+      -webkit-text-fill-color: $color-text-placeholder;
     }
     -moz-appearance: textfield;
     &::-webkit-outer-spin-button, &::-webkit-inner-spin-button {
