--- a/src/components/_styles/components/Preview.module.styl
+++ b/src/components/_styles/components/Preview.module.styl
@@ -3,7 +3,7 @@
 .preview {
   reset: base;
   background: $fill-base;
-  padding: $v-spacing-md 0 $v-spacing-md $h-spacing-md;;
+  padding: $v-spacing-md 0 $v-spacing-md $h-spacing-lg;
   &:not(.no-border) {
     hairline(top bottom);
   }
