--- a/src/components/_styles/components/PreviewItem.module.styl
+++ b/src/components/_styles/components/PreviewItem.module.styl
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: space-between;
   line-height: 1.5;
-  padding: $v-spacing-xs $h-spacing-md $v-spacing-xs 0;
+  padding: $v-spacing-xs $h-spacing-lg $v-spacing-xs 0;
   font-size: $font-size-subhead;
   color: $color-text-caption;
   &:not(.plain):first-child {
