--- a/src/components/_styles/components/Sheet.module.styl
+++ b/src/components/_styles/components/Sheet.module.styl
@@ -10,7 +10,7 @@
     justify-content: space-between;
     width: 100%;
     min-height: 45px;
-    padding: $v-spacing-md $h-spacing-md;
+    padding: $v-spacing-md $h-spacing-lg;
     hairline(bottom);
     .action {
       font-size: $font-size-caption;
