--- a/src/components/_styles/components/Spacing.module.styl
+++ b/src/components/_styles/components/Spacing.module.styl
@@ -16,3 +16,21 @@ for $size in (xs sm md lg xl) {
     }
   }
 }
+
+.between-x {
+  &.first-child {
+    margin-left: 0;
+  }
+  &.last-child {
+    margin-right: 0;
+  }
+}
+
+.between-y {
+  &.first-child {
+    margin-top: 0;
+  }
+  &.last-child {
+    margin-bottom: 0;
+  }
+}
