--- a/src/components/_styles/components/Popover.module.styl
+++ b/src/components/_styles/components/Popover.module.styl
@@ -1,5 +1,59 @@
 @require '../settings';
 
-.popover {
+$popover-arrow-width = 7px;
 
+.popover {
+  z-index: 1;
+  visibility: hidden;
+  pointer-events: none;
+  &[x-placement^=top], &[x-placement^=bottom] {
+    flex-direction: column;
+    margin: 3px 0;
+  }
+  &[x-placement^=left], &[x-placement^=right] {
+    flex-direction: row;
+    margin: 0 3px;
+  }
+  &.visible {
+    visibility: visible;
+    pointer-events: auto;
+  }
+}
+
+.message {
+  flex: 1;
+  background: white;
+  order: 1;
+  padding: $v-spacing-md $h-spacing-md;
+  font-size: $font-size-base;
+  hairline(all);
+  hairline-radius(3px);
+}
+
+.arrow {
+  z-index: 2;
+  size: $popover-arrow-width;
+  background-color: $fill-base;
+  hairline(top right);
+  position: absolute;
+  [x-placement^=top] & {
+    order: 2;
+    transform: rotate(135deg);
+    bottom: -($popover-arrow-width / 2);
+  }
+  [x-placement^=right] & {
+    order: 0;
+    transform: rotate(-135deg);
+    left: -($popover-arrow-width / 2);
+  }
+  [x-placement^=bottom] & {
+    order: 0;
+    transform: rotate(-45deg);
+    top: -($popover-arrow-width / 2);
+  }
+  [x-placement^=left] & {
+    order: 2;
+    transform: rotate(45deg);
+    right: -($popover-arrow-width / 2);
+  }
 }
