--- a/src/components/_styles/components/NoticeBar.module.styl
+++ b/src/components/_styles/components/NoticeBar.module.styl
@@ -4,7 +4,7 @@
   reset: base;
   display: flex;
   align-items: center;
-  background-color: rgba($notice-bar-font-color, 15%);
+  background-color: $notice-bar-bg-color;
   color: $notice-bar-font-color;
   font-size: $notice-bar-font-size;
   height: $notice-bar-height;
