--- a/src/components/_styles/variables.styl
+++ b/src/components/_styles/variables.styl
@@ -92,6 +92,7 @@ $tab-bar-height = 50px;
 $notice-bar-font-size = 14px;
 $notice-bar-height = 36px;
 $notice-bar-font-color = $color-warning;
+$notice-bar-bg-color = #FEFCEC;
 
 // 计数器
 $counter-height = 30px;
