--- a/src/components/_styles/components/Popover.module.styl
+++ b/src/components/_styles/components/Popover.module.styl
@@ -1,64 +1,82 @@
 @require '../settings';
 
-$popover-arrow-width = 7px;
-
 .popover {
-  z-index: 1;
+  reset: base;
+  position: absolute;
+  background-color: $fill-base;
+  border-radius: 3px;
+  padding: $v-spacing-md $h-spacing-md;
   visibility: hidden;
   pointer-events: none;
-  &[x-placement^=top], &[x-placement^=bottom] {
-    flex-direction: column;
-    margin: 3px 0;
-  }
-  &[x-placement^=left], &[x-placement^=right] {
-    flex-direction: row;
-    margin: 0 3px;
-  }
+
+  // 显示时
   &.visible {
+    z-index: 1;
     visibility: visible;
     pointer-events: auto;
   }
-}
 
-.message {
-  flex: 1;
-  order: 1;
-  font-size: $font-size-base;
-  background-color: $fill-base;
-  hairline(all);
-  hairline-radius(3px);
-  .no-border & {
-    hairline-remove(all);
+  // 定位
+  &[x-placement^=top] {
+    margin-bottom: $popover-arrow-size;
+    .arrow {
+      border-width: $popover-arrow-size $popover-arrow-size 0 $popover-arrow-size;
+      border-left-color: transparent;
+      border-right-color: transparent;
+      border-bottom-color: transparent;
+      bottom: - $popover-arrow-size;
+      margin-top: 0;
+      margin-bottom: 0;
+    }
   }
-}
+  &[x-placement^=bottom] {
+    margin-top: $popover-arrow-size;
+    .arrow {
+      border-width: 0 $popover-arrow-size $popover-arrow-size $popover-arrow-size;
+      border-left-color: transparent;
+      border-right-color: transparent;
+      border-top-color: transparent;
+      top: - $popover-arrow-size;
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+  }
+  &[x-placement^=right] {
+    margin-left: $popover-arrow-size;
+    .arrow {
+      border-width: $popover-arrow-size $popover-arrow-size $popover-arrow-size 0;
+      border-left-color: transparent;
+      border-top-color: transparent;
+      border-bottom-color: transparent;
+      left: - $popover-arrow-size;
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
+  &[x-placement^=left] {
+    margin-right: $popover-arrow-size;
+    .arrow {
+      border-width: $popover-arrow-size 0 $popover-arrow-size $popover-arrow-size;
+      border-right-color: transparent;
+      border-top-color: transparent;
+      border-bottom-color: transparent;
+      right: - $popover-arrow-size;
+      margin-left: 0;
+      margin-right: 0;
+    }
+  }
 
-.arrow {
-  z-index: 2;
-  size: $popover-arrow-width;
-  background-color: $fill-base;
-  hairline(top right);
-  position: absolute;
-  .no-border & {
-    hairline-remove(top right);
+  .message {
+    font-size: $font-size-base;
   }
-  [x-placement^=top] & {
-    order: 2;
-    transform: rotate(135deg);
-    bottom: -($popover-arrow-width / 2);
-  }
-  [x-placement^=right] & {
-    order: 0;
-    transform: rotate(-135deg);
-    left: -($popover-arrow-width / 2);
-  }
-  [x-placement^=bottom] & {
-    order: 0;
-    transform: rotate(-45deg);
-    top: -($popover-arrow-width / 2);
-  }
-  [x-placement^=left] & {
-    order: 2;
-    transform: rotate(45deg);
-    right: -($popover-arrow-width / 2);
+
+  .arrow {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    color: $fill-base;
+    border-color: currentColor;
+    position: absolute;
+    margin: $popover-arrow-size;
   }
 }
