--- a/src/components/_styles/variables.styl
+++ b/src/components/_styles/variables.styl
@@ -100,3 +100,9 @@ $counter-height = 30px;
 // 标签栏
 $tabs-font-size = $font-size-subhead;
 $tabs-height = 43px;
+
+// 气泡
+$popover-arrow-size = 6px;
+
+// 提示
+$tip-bg-color = rgba(black, 55%);
