--- a/src/components/_styles/variables.styl
+++ b/src/components/_styles/variables.styl
@@ -56,6 +56,11 @@ $v-spacing-xl = 21px;
 // 透明度
 $opacity-disabled = 0.3;
 
+// z-index
+// 注：Popup 组件的默认起始 z-index 是 5000
+$tab-bar-z-index = 4500;
+$popover-z-index = 4000;
+
 // 按钮
 $button-height = 46px;
 $button-font-size = 18px;
