--- a/src/components/_styles/components/Tip.module.styl
+++ b/src/components/_styles/components/Tip.module.styl
@@ -8,10 +8,19 @@
   :global(.l-popover-arrow) {
     color: $tip-bg-color;
   }
+  :global(.l-popover-message) {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .close {
+  flex-shrink: 0;
+  align-self: stretch;
+  display: flex;
+  align-items: center;
   font-size: 1.15em;
   color: rgba(white, 50%);
   margin-left: $h-spacing-sm;
 }
+
