--- a/src/components/_styles/components/ImageViewer.module.styl
+++ b/src/components/_styles/components/ImageViewer.module.styl
@@ -1,3 +1,5 @@
+@require '../settings';
+
 :global {
 
   /*! PhotoSwipe main CSS by Dmitry Semenov | photoswipe.com | MIT license */
@@ -663,4 +665,8 @@
   .pswp--minimal--dark .pswp__top-bar {
     background: none; }
 
+}
+
+.image-viewer {
+  z-index: $image-viewer-z-index;
 }
