--- a/src/components/_styles/variables.styl
+++ b/src/components/_styles/variables.styl
@@ -57,9 +57,10 @@ $v-spacing-xl = 21px;
 $opacity-disabled = 0.3;
 
 // z-index
-// 注：Popup 组件的默认起始 z-index 是 5000
-$tab-bar-z-index = 4500;
 $popover-z-index = 4000;
+$tab-bar-z-index = 4500;
+// Popup 组件的默认起始 z-index 是 5000
+$image-viewer-z-index = 5500;
 
 // 按钮
 $button-height = 46px;
