--- a/docs/.vuepress/styles.styl
+++ b/docs/.vuepress/styles.styl
@@ -6,3 +6,8 @@ table {
   display: table;
   width: 100%;
 }
+
+.content code {
+  padding-top: 0.1rem !important;
+  padding-bottom: 0.1rem !important;
+}
