--- a/src/components/_styles/components/GridItem.module.styl
+++ b/src/components/_styles/components/GridItem.module.styl
@@ -37,7 +37,10 @@
 }
 
 .message {
+  text-align: center;
+  padding: 0 $h-spacing-sm;
   font-size: $font-size-caption-sm;
+  text-wrap: true;
   .thumbnail + & {
     margin-top: $v-spacing-md;
   }
