--- a/src/components/_styles/variables.styl
+++ b/src/components/_styles/variables.styl
@@ -59,6 +59,7 @@ $opacity-disabled = 0.3;
 // z-index
 $popover-z-index = 4000;
 $tab-bar-z-index = 4500;
+$action-bar-z-index = 4500;
 // Popup 组件的默认起始 z-index 是 5000
 $image-viewer-z-index = 5500;
 
