--- a/src/components/_styles/components/Preview.module.styl
+++ b/src/components/_styles/components/Preview.module.styl
@@ -2,6 +2,7 @@
 
 .preview {
   reset: base;
+  user-select: auto;
   background: $fill-base;
   padding: $v-spacing-md 0 $v-spacing-md $h-spacing-lg;
   &:not(.no-border) {
