--- a/src/components/_styles/components/ListItem.module.styl
+++ b/src/components/_styles/components/ListItem.module.styl
@@ -2,6 +2,7 @@
 
 .list-item {
   reset: base;
+  user-select: auto;
   position: relative;
   display: flex;
   align-items: center;
@@ -46,6 +47,7 @@
 
   // 左部内容
   .left {
+    align-self: stretch;
     flex-shrink: 0;
     flex-grow: 1;
     display: flex;
@@ -55,12 +57,16 @@
 
     // 标题
     .title {
+      display: flex;
+      align-items: center;
       flex-basis: 100%;
       overflow: hidden;
     }
 
     // 简介
     .desc {
+      display: flex;
+      align-items: center;
       font-size: $font-size-base;
       flex-basis: 100%;
       overflow: hidden;
@@ -82,6 +88,7 @@
   .extra {
     font-size: $font-size-base;
     color: $color-text-caption;
+    align-self: stretch;
     text-wrap: true;
     overflow: hidden;
     display: flex;
