--- a/src/components/_styles/components/Field.module.styl
+++ b/src/components/_styles/components/Field.module.styl
@@ -47,7 +47,7 @@
 .error {
   :global {
     .l-list-item-value, .l-list-item-extra {
-      color: $color-danger;
+      color: $color-danger !important;
     }
   }
 }
