--- a/src/components/_styles/components/Popover.module.styl
+++ b/src/components/_styles/components/Popover.module.styl
@@ -3,6 +3,7 @@
 .popover {
   reset: base;
   position: absolute;
+  top: 0;
   background-color: $fill-base;
   border-radius: 3px;
   padding: $v-spacing-md $h-spacing-md;
