--- a/src/components/_styles/variables.styl
+++ b/src/components/_styles/variables.styl
@@ -73,7 +73,7 @@ $button-font-size--mini = 13px;
 $choose-size = 22px;
 
 // 操作栏
-$action-bar-height = 50px;
+$action-bar-height = $button-height;
 
 // 打分
 $rate-font-size = 21px;
