--- a/src/components/_styles/components/Field.module.styl
+++ b/src/components/_styles/components/Field.module.styl
@@ -35,6 +35,8 @@
       left: ($h-spacing-lg / 2);
       font-size: $font-size-base;
       color: $color-danger;
+      top: 50%;
+      transform: translateY(-50%);
     }
     &.multiple-line {
       &::after {
