--- a/src/components/_styles/components/ListItem.module.styl
+++ b/src/components/_styles/components/ListItem.module.styl
@@ -1,14 +1,20 @@
 @require '../settings';
 
+$list-item-h-padding = $h-spacing-lg;
+$list-item-v-padding = $v-spacing-md;
+$list-item-h-spacing = $h-spacing-md;
+
 .list-item {
   reset: base;
   user-select: auto;
   position: relative;
   display: flex;
   align-items: center;
+  font-size: 16px;
+  line-height: 1.5;
 
   // 点击反馈
-  &.tappable {
+  &.feedback {
     &.active {
       background-color: $fill-tap;
     }
@@ -25,13 +31,11 @@
   }
 }
 
-// 图标
-.icon {
-  flex-shrink: 0;
-  display: flex;
-  align-items: center;
-  font-size: 21px;
-  margin-left: $h-spacing-lg;
+// 头部
+.header {
+  font-size: 1.2em;
+  line-height: 1;
+  margin-left: $list-item-h-padding;
 }
 
 // 主内容
@@ -42,37 +46,12 @@
   align-items: center;
   min-height: 44px;
   overflow: hidden;
-  margin-left: $h-spacing-lg;
-  padding: $h-spacing-md $h-spacing-lg $h-spacing-md 0;
+  margin-left: $list-item-h-padding;
+  padding: $list-item-v-padding $list-item-h-padding $list-item-v-padding 0;
 
-  // 左部内容
-  .left {
-    align-self: stretch;
-    flex-shrink: 0;
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-    font-size: $font-size-caption;
-
-    // 标题
-    .title {
-      display: flex;
-      align-items: center;
-      flex-basis: 100%;
-      overflow: hidden;
-    }
-
-    // 简介
-    .desc {
-      display: flex;
-      align-items: center;
-      font-size: $font-size-base;
-      flex-basis: 100%;
-      overflow: hidden;
-      color: $color-text-caption;
-      line-height: 1.5;
-    }
+  // 标题
+  .title {
+    ellipsis: 1;
   }
 
   // 内容区
@@ -80,30 +59,25 @@
     // 以极大的 grow 和 shrink 值令其自适应
     flex-grow: 2000;
     flex-shrink: 2000;
-    overflow: hidden;
-    font-size: $font-size-caption;
+    text-wrap: true;
   }
 
   // 其他信息
   .extra {
-    font-size: $font-size-base;
+    font-size: .9em;
     color: $color-text-caption;
-    align-self: stretch;
     text-wrap: true;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
   }
 
   // 链接箭头
   .chevron {
     flex-shrink: 0;
-    font-size: $font-size-base;
+    font-size: .7em;
     color: $color-line-dark;
   }
 }
 
 // 间隔
-.icon + .body, .left + .value, .value + .extra {
-  margin-left: $h-spacing-md;
+.header + .body, .title + .value, .value + .extra {
+  margin-left: $list-item-h-spacing;
 }
