--- a/src/components/_styles/components/ListItem.module.styl
+++ b/src/components/_styles/components/ListItem.module.styl
@@ -10,7 +10,7 @@ $list-item-h-spacing = $h-spacing-md;
   position: relative;
   display: flex;
   align-items: center;
-  font-size: 16px;
+  font-size: 15px;
   line-height: 1.5;
 
   // 点击反馈
@@ -51,6 +51,7 @@ $list-item-h-spacing = $h-spacing-md;
 
   // 标题
   .title {
+    flex-grow: 1;
     ellipsis: 1;
   }
 
